[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/enemies/enemy_health.gd" id="1_enemy"]
[ext_resource type="Script" path="res://scripts/enemies/enemy_ai.gd" id="2_ai"]

[node name="root" type="Node2D"]
script = ExtResource("1_enemy")

[node name="EnemyAI" type="Node" parent="."]
script = ExtResource("2_ai")

[node name="Sprite" type="ColorRect" parent="."]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = -55.0
max_value = 50.0
value = 50.0
show_percentage = false

[node name="IntentionLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = 60.0
offset_right = 50.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 14
text = "???"
horizontal_alignment = 1
vertical_alignment = 1
